tooling/nargo_cli/tests/snapshots/execute__tests__diamond_deps_0_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10671582081383609394",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUWw6CMBDc8ohWgjGa+KOHKILCJ4mPezQSzsHRhbiV7QaNCe0kTRe2nZndNhXwRtAPgXFE/nGYNTXOah4yh1zKp0/h0KcgPgNumMaCxMFE/oizZGuGfOiweDnhyxV/pYpSgg3H/nNJOD3wnwx/5IdfLZDn1tn8wHRTsO8M3WNy9B7dMbfsxxrGeEP4BjyIruGWjM/xnbh4PrNs98W/qW3AtYMPHOnmCfZ4P1Jb2rzP/Mz4+U71CP7ca+pLf2gmpB9RZ+vUML8nZTU+iCHyx2DXAUw/ZusP+L0i/s0czfDZljprc93qs26a4qm3jB9Yn14U8oiGTQcAAA==",
  "debug_symbols": "hZDRCoMgFIbf5Vx7kW4t61VihJWFIBpmgxG++46jkduCbg7+8v2Hw7dCL9tlbJQZ7AxVvYK2nfDKGkxrINA6pbUam/Qbsjho8ebnSZgYZy+ch4oyTkCaHl/5BfuD0hKqPAvkD+XXjSzLHaRHYP4Bsx1k4U6A8pMbCpreEBvlSYPfvhoB00M4JVotNyXDYrrEkH9O8kfW5Gwn+8XJqC0xhrNmjLAC1+LqFw==",
  "file_map": {
    "50": {
      "source": "use dep1::call_dep1_then_dep2;\nuse dep2::call_dep2;\nuse dep2::RESOLVE_THIS;\n\nfn main(x: Field, y: pub Field) -> pub Field {\n    call_dep1_then_dep2(x, y) + call_dep2(x, y) + RESOLVE_THIS\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/diamond_deps_0/src/main.nr"
    },
    "51": {
      "source": "use dep2::call_dep2;\n\npub fn call_dep1_then_dep2(x: Field, y: Field) -> Field {\n    call_dep2(x, y)\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/test_libraries/diamond_deps_1/src/lib.nr"
    },
    "52": {
      "source": "global RESOLVE_THIS: Field = 3;\n\npub fn call_dep2(x: Field, y: Field) -> Field {\n    x + y\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/test_libraries/diamond_deps_2/src/lib.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
